# FootballAgents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMENTARY_PLAN.md  DATA_PLAN.md  LICENSE  MULTILEAGUE_PLAN.md  PROJECT_OUTLINE.md  README.md  TODO.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: data-auditor.md  source-auditor.md
docs/: data_sources.md  warehouse_tables.md
memory/: prediction_log.md  wc2026_state.json
memory/critic/: argentina.json  argentina.md
memory/matches/: Argentina_vs_Algeria_2026-06-17.json  Argentina_vs_Algeria_2026-06-17.md  Argentina_vs_Algeria_undated.json  (+149 more)
scripts/: audit_tables.sh  check_docs.py
tests/: test_agents_verdict.py  test_alias_reads.py  test_alternative.py  test_analyze_match.py  test_api_football.py  test_backtest.py  test_bbc_guide.py  test_calibration.py  test_calibration_tab.py  test_cli.py  test_commentary.py  test_commentary_providers.py  test_credit.py  test_critic.py  test_data_explorer.py  test_dataflows.py  test_depth_and_stream.py  test_dossier.py  test_draw_stage.py  test_enrich.py  test_entities.py  test_evaluate.py  test_fdcouk.py  test_focus.py  test_goal_model.py  test_guardian_experts.py  test_guardian_guide.py  test_guided_ux.py  test_hoard_data.py  test_http_cache.py  test_injuries.py  test_intl_strength.py  test_leagues.py  test_llm.py  test_market.py  test_match_store.py  test_memory_loop.py  test_menu.py  test_multileague.py  test_odds_market.py  (+29 more)
worldcupagents/: __init__.py  calibration.py  cli.py  config.py  credit.py  recall.py  seasons.py  tui.py
(+203 files in other folders)
